<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    tools:context=".ui.view.RegisterActivity">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:hint="@string/e_mail"
        android:padding="12dp"
        android:background="?android:attr/editTextBackground"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:padding="12dp"
        android:background="?android:attr/editTextBackground"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_repitPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:hint="@string/repit_password"
        android:padding="12dp"
        android:background="?android:attr/editTextBackground"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/purple_500"
        android:textColor="@android:color/white"
        android:text="@string/registrarse"
        android:paddingVertical="10dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"
        android:text="@string/ya_tienes_cuenta_acceder"
        android:textColor="?android:attr/colorAccent"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
