<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.view.LoginActivity">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="?android:attr/editTextBackground"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="?android:attr/editTextBackground"
        tools:ignore="PrivateResource" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/acceder"
        android:backgroundTint="@color/purple_500"
        android:textColor="@android:color/white"
        android:paddingVertical="10dp" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/no_tienes_cuenta_registrate_ahora"
        android:textColor="?android:attr/colorAccent"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>
